ingress-controller.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vegchain-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: "api.vegchain.tech"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: backend
                port:
                  number: 8080
    - host: "vegchain.tech"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: frontend
                port:
                  number: 3000
